# samegame

./: .clang-format  .gitignore  CMakeLists.txt  benchmark.cpp  compile_commands.json  main.cpp  main2.cpp  sg.cpp
data/: input.txt
include/: Agent.h  AgentGreedy.h~  GameState.h  Grid.h  constants.h  dsu.h  samegame.h  types.h
src/: Agent.cpp~  AgentGreedy.cpp~  GameState.cpp  Grid.cpp  agent_random.h  agent_random_test.cpp  clusterhelper.cpp  clusterhelper.h  debug.cpp  debug.h  display.cpp  display.h  dsu.cpp  dsu.h  grid.h  mcts.cpp  mcts.h  mcts.hpp  mcts_rollout.h  mcts_selection.h  mcts_tree.h  mctstree.cpp  mctstree.h  policies.h  rand.h  samegame.cpp  samegame.h  sghash.cpp  sghash.h  types.h  zobrist.h
src/mcts_impl2/: mcts.h  mcts.hpp  mcts_tree.h
src/tests/: CMakeLists.txt  agent.cc  dsu_tests.cc  mcts_tests.cc  mctstree_tests.cc  randutil_tests.cc  samegame_tests.cc  zobrist_tests.cc
tests/: CMakeLists.txt  test_agent.cpp  test_random.cpp
tests/data/: input.txt
tests/include/: AgentRandom.h  AgentTest.h
tests/src/: AgentRandom.cpp  AgentTest.cpp
